--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
         <div class="Events Red">
             <h3>Latest events</h3>
             <div class="arrowHold">
-                <div class="arrowHeader Red">
+                <div class="arrowHeader2 Red">
                     <h6>Event one</h6>
                 </div>
                 <div class="arrowBlurb">
                     <p>Lorem ipsum dolor sit, consectur adipisicig elit, sed do eiusmod tempor incidunt ut labore et</p>
                 </div>
-                <div class="arrowHeader Red">
+                <div class="arrowHeader2 Red">
                     <h6>Event two</h6>
                 </div>
                 <div class="arrowBlurb">
